<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="stResetHistory" Id="{ce57d3dc-c6ea-0f76-3f2f-e9d37760a9f1}">
    <Declaration><![CDATA[TYPE stResetHistory :
STRUCT
	sWorkerID					: STRING(255);
	sOperationDescription		: STRING(255);
	stDate						: stAircomTimeStruct;
	iOperationAmout				: ULINT;
	iCyclesAmount				: ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>